syntax = "proto3";

package shifu;

option go_package = "github.com/rhoninl/sft/pkg/root/web/proto/shifu";

service ShifuService {
  // Check if Shifu is installed
  rpc CheckInstallation(CheckInstallationRequest) returns (CheckInstallationResponse) {}
  
  // Install Shifu with specific version
  rpc InstallShifu(InstallShifuRequest) returns (InstallShifuResponse) {}

  // Uninstall Shifu
  rpc UninstallShifu(UninstallShifuRequest) returns (UninstallShifuResponse) {}

  // Get All Available Versions
  rpc GetAllAvailableVersions(GetAllAvailableVersionsRequest) returns (GetAllAvailableVersionsResponse) {}
}

message CheckInstallationRequest {}

message CheckInstallationResponse {
  bool installed = 1;
}

message InstallShifuRequest {
  string version = 1;
}

message InstallShifuResponse {
  bool success = 1;
  string error = 2;
} 

message GetAllAvailableVersionsRequest {}

message GetAllAvailableVersionsResponse {
  repeated string versions = 1;
}

message UninstallShifuRequest {}

message UninstallShifuResponse {
  bool success = 1;
  string error = 2;
}